--- a/reklamodatelyam.html
+++ b/reklamodatelyam.html
@@ -126,7 +126,7 @@
 
     <div class="rek-3">
         <div class="rek-3__img">
-            <img src="img/reklamodatelyam/group_128.png" alt="" w="230" height="557">
+            <img src="img/reklamodatelyam/group_128.png" alt="" width="230" height="557">
         </div>
         <div class="rek-3__wrap">
             <h2 class="rek-3__title">Какие возможности открывает платформа?</h2>
@@ -184,7 +184,7 @@
             </div>
         </div>
         <div class="rek-4__img">
-            <img src="img/reklamodatelyam/group_128-1.png" alt="" w="220" height="517">
+            <img src="img/reklamodatelyam/group_128-1.png" alt="" width="220" height="517">
         </div>
     </div>
 
