добавил мои услуги в лк 23.02.2021

--- a/dashboard-services.html
+++ b/dashboard-services.html
@@ -168,25 +168,94 @@
                         </ul>
                     </div>
                 </div>
+                <div class="account__main-rating">
+                    <div class="account__main-rating-head">
+                        <p class="account__main-rating-head-text svg-star">Отзыв/ов: 30</p>
+                    </div>
+                    <div class="account__main-rating-image">
+                        <div class="account__main-rating-chart">
+                            <svg class="account__main-rating-chart-svg" width="100px" height="100px" viewBox="0 0 120 120">
+                                <circle cx="60" cy="60" r="50" fill="#fff"></circle>
+                                <circle data-percent="72" cx="60" cy="60" r="50" fill="transparent" stroke="#ffe500" style="stroke-width: 20px; stroke-dasharray: 226.195, 87.9646; stroke-dashoffset: 78.5398px;"></circle>
+                                <circle data-percent="28" cx="60" cy="60" r="50" fill="transparent" stroke="#b3b0af" style="stroke-width: 20px; stroke-dasharray: 87.9646, 226.195; stroke-dashoffset: -147.655px;"></circle>
+                            </svg>
+                            <div class="account__main-rating-info">
+                                <p class="account__main-rating-info-title">72%</p>
+                                <p class="account__main-rating-info-text">Рейтинг</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="account__services account__block">
                 <p class="account__services-title account__block-title">Услуги</p>
-                <ul class="account__services-list">
-                    <li class="account__services-item account__services-item--head">
-                        <span class="account__services-item-text">Название услуги</span>
-                        <span class="account__services-item-text">Стоимость</span>
-                    </li>
-                </ul>
-                <ul class="account__services-list">
-                    <li class="account__services-item account__services-item--star">
-                        <span class="account__services-item-text">1 Story</span>
-                        <span class="account__services-item-text account__services-item-text--price">5 грн.</span>
-                        <span class="account__services-item-action">
-                            <span class="account__services-item-action-change">Изменить</span>
-                            <span class="account__services-item-action-remove svg-remove">Удалить</span>
-                        </span>
-                    </li>
-                </ul>
+                <div class="account__services-list">
+                    <div class="account__services-item account__services-item--head">
+                        <p class="account__services-item-text">Название услуги</p>
+                        <p class="account__services-item-text">Стоимость</p>
+                    </div>
+                </div>
+                <div class="account__services-list">
+                    <div class="account__services-item account__services-item--star">
+                        <div class="account__services-item-info">
+                            <p class="account__services-item-text">1 Story</p>
+                            <p class="account__services-item-text account__services-item-text--bold">
+                                <span class="account__services-item-text--price">Стоимость:&nbsp;</span><span>999 999 999 грн.</span>
+                            </p>
+                        </div>
+                        <div class="account__services-item-action">
+                            <div class="account__services-item-action-change">Изменить</div>
+                            <div class="account__services-item-action-remove svg-remove">Удалить</div>
+                        </div>
+                    </div>
+                    <div class="account__services-item account__services-item--star">
+                        <div class="account__services-item-info">
+                            <p class="account__services-item-text">Услуга 2</p>
+                            <p class="account__services-item-text account__services-item-text--bold">
+                                <span class="account__services-item-text--price">Стоимость:&nbsp;</span><span>1 999 999 грн.</span>
+                            </p>
+                        </div>
+                        <div class="account__services-item-action">
+                            <div class="account__services-item-action-change">Изменить</div>
+                            <div class="account__services-item-action-remove svg-remove">Удалить</div>
+                        </div>
+                    </div>
+                    <div class="account__services-item account__services-item--star">
+                        <div class="account__services-item-info">
+                            <p class="account__services-item-text">Услуга 3</p>
+                            <p class="account__services-item-text account__services-item-text--bold">
+                                <span class="account__services-item-text--price">Стоимость:&nbsp;</span><span>1 999 грн.</span>
+                            </p>
+                        </div>
+                        <div class="account__services-item-action">
+                            <div class="account__services-item-action-change">Изменить</div>
+                            <div class="account__services-item-action-remove svg-remove">Удалить</div>
+                        </div>
+                    </div>
+                    <div class="account__services-item">
+                        <div class="account__services-item-info">
+                            <p class="account__services-item-text">Услуга 4</p>
+                            <p class="account__services-item-text account__services-item-text--bold">
+                                <span class="account__services-item-text--price">Стоимость:&nbsp;</span><span>999 грн.</span>
+                            </p>
+                        </div>
+                        <div class="account__services-item-action">
+                            <div class="account__services-item-action-change">Изменить</div>
+                            <div class="account__services-item-action-remove svg-remove">Удалить</div>
+                        </div>
+                    </div>
+                    <div class="account__services-item">
+                        <div class="account__services-item-info">
+                            <p class="account__services-item-text">Услуга 5</p>
+                            <p class="account__services-item-text account__services-item-text--bold">
+                                <span class="account__services-item-text--price">Стоимость:&nbsp;</span><span>&nbsp;</span>
+                            </p>
+                        </div>
+                        <div class="account__services-item-action">
+                            <div class="account__services-item-action-add">Добавить услугу</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
