--- a/dashboard.html
+++ b/dashboard.html
@@ -168,6 +168,24 @@
                         </ul>
                     </div>
                 </div>
+                <div class="account__main-rating">
+                    <div class="account__main-rating-head">
+                        <p class="account__main-rating-head-text svg-star">Отзыв/ов: 30</p>
+                    </div>
+                    <div class="account__main-rating-image">
+                        <div class="account__main-rating-chart">
+                            <svg class="account__main-rating-chart-svg" width="100px" height="100px" viewBox="0 0 120 120">
+                                <circle cx="60" cy="60" r="50" fill="#fff"></circle>
+                                <circle data-percent="72" cx="60" cy="60" r="50" fill="transparent" stroke="#ffe500" style="stroke-width: 20px; stroke-dasharray: 226.195, 87.9646; stroke-dashoffset: 78.5398px;"></circle>
+                                <circle data-percent="28" cx="60" cy="60" r="50" fill="transparent" stroke="#b3b0af" style="stroke-width: 20px; stroke-dasharray: 87.9646, 226.195; stroke-dashoffset: -147.655px;"></circle>
+                            </svg>
+                            <div class="account__main-rating-info">
+                                <p class="account__main-rating-info-title">72%</p>
+                                <p class="account__main-rating-info-text">Рейтинг</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="account__settings account__block">
                 <p class="account__settings-title account__block-title">Общая информация</p>
