--- a/reklamodatelyam.html
+++ b/reklamodatelyam.html
@@ -26,6 +26,7 @@
         </div>
     </div>
 
+    <!-- entry -->
     <header class="header rek-1">
         <div class="header__wrap">          
             <div class="header__left">
@@ -37,19 +38,55 @@
             </div>
             <div class="header__center">
                 <button class="header__button svg-door jsLoginBlock"></button>
+                <div class="svg-letter header__center-letter">
+                    <span class="svg-letter header__center-letter-counter">99</span>
+                </div>
+                <div class="header__center-user">
+                    <div class="header__center-user-avatar">
+                        <img class="header__center-user-avatar-img" src="img/private-office/avatar_default-min.png" alt="" width="60" height="60">
+                    </div>
+                    <div class="header__center-user-info">
+                        <p class="header__center-user-info-title">Name</p>
+                        <p class="header__center-user-info-text">Блогер</p>
+                    </div>
+                    <ul class="header__submenu">
+                        <li class="header__submenu-item">
+                            <a href="#" class="header__submenu-link">Мои услуги</a>
+                        </li>
+                        <li class="header__submenu-item">
+                            <a href="#" class="header__submenu-link">Сообщения</a>
+                            <span class="header__submenu-count">0</span>
+                        </li>
+                        <li class="header__submenu-item">
+                            <a href="#" class="header__submenu-link">Рекламные кампании</a>
+                        </li>
+                        <li class="header__submenu-item">
+                            <a href="#" class="header__submenu-link">Платежная информация</a>
+                        </li>
+                        <li class="header__submenu-item">
+                            <a href="#" class="header__submenu-link">Instagram-аккаунт</a>
+                        </li>
+                        <li class="header__submenu-item">
+                            <a href="#" class="header__submenu-link">Настройка профиля</a>
+                        </li>
+                        <li class="header__submenu-item">
+                            <a href="#" class="header__submenu-link">Выход</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="header__right">
                 <ul class="header__menu">
-                    <li class="header__menu-item">
+                    <li class="header__menu-item header__menu-item--no_entry">
                         <a href="reklamodatelyam.html" class="header__menu-link">Для рекламодателей</a>
                     </li>
-                    <li class="header__menu-item">
+                    <li class="header__menu-item header__menu-item--no_entry">
                         <a href="blogeram.html" class="header__menu-link">Для блогеров</a>
                     </li>
                     <li class="header__menu-item header__menu-item--submenu jsSubmenuButton">
                         <a href="#" class="header__menu-link">Полезное</a>
                         <ul class="header__submenu jsSubmenu">
-                            <li class="header__submenu-item active">
+                            <li class="header__submenu-item">
                                 <a href="reklamodatelyam.html" class="header__submenu-link">Для рекламодателей</a>
                             </li>
                             <li class="header__submenu-item">
@@ -66,8 +103,11 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="header__menu-item">
+                    <li class="header__menu-item header__menu-item--order">
                         <a href="search-bloggers.html" class="header__menu-link">Поиск блогеров</a>
+                    </li>
+                    <li class="header__menu-item header__menu-item--entry">
+                        <a href="search-bloggers.html" class="header__menu-link">Мои рекламные кампании</a>
                     </li>
                 </ul>
                 <div class="header__login-area">
